# pct_python_default_test

./: .coveragerc  .travis.yml  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  conftest.py  pct_python_default_test.ipynb  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.docs/: CHANGES.rst  README_template.rst  badges.rst  commandline_help.rst  contribute.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  tested_under.rst
.github/workflows/: codeql-analysis.yml  python-package.yml
pct_python_default_test/: __init__conf__.py  pct_python_default_test.py  pct_python_default_test_cli.py
tests/: test_cli.py
tests/local_testscripts/: lib_bash_functions.sh  run_testloop.sh
travis_secrets/secrets/: CC_TEST_REPORTER_ID.secret.txt  PYPI_PASSWORD.secret.txt  pypi_password.secret.txt
